[project]
name = "online-dt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]>=1.2.2",
    "minari[all]>=0.5.3",
    "mujoco==3.2.3",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "torch",
    "torchvision",
    "transformers>=4.57.3",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
